# ParPy

./: Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: Makefile  bench.py  common.py  cuda-env.yml  env.yml  forward.py  metal-env.yml  minimal-env.yml  paper-ex.py  sddmm.py  sddmm_cusparse.cu
benchmarks/5mer/: hmm.cu  trellis.py
benchmarks/7mer/: hmm.cu  trellis.py
examples/: axpy.py  ext-sum.py  external.py  hello.py  jit-compiling.py  print.py
examples/code/: cuda_helper.h
native/: parir_metal.cpp  parir_metal.h
parir/: __init__.py  compile.py  key.py
python/parir/: __init__.py  backend.py  buffer.py  compile.py  key.py  operators.py  state.py  validate.py
python/parpy/: __init__.py  backend.py  buffer.py  compile.py  key.py  operators.py  runtime.py  types.py  validate.py
python/prickle/: __init__.py  backend.py  buffer.py  compile.py  key.py  operators.py  state.py  types.py  validate.py
src/: buffer.rs  err.rs  info.rs  ir.rs  lib.rs  name.rs  option.rs  par.rs  python.rs
src/codegen/: ast.rs  from_ir.rs  mod.rs
src/cuda/: ast.rs  ast_builder.rs  clusters.rs  codegen.rs  constant_fold.rs  error.rs  free_vars.rs  global_mem.rs  graphs.rs  inter_block.rs  memory.rs  mod.rs  new_sync.rs  par.rs  par_tree.rs  pprint.rs  reduce.rs  sync.rs
src/gpu/: ast.rs  ast_builder.rs  codegen.rs  constant_fold.rs  flatten_structs.rs  free_vars.rs  global_mem.rs  inter_block.rs  mod.rs  par.rs  par_tree.rs  (+3 more)
test/: common.py  test_arith.py  test_axpy.py  test_bool.py  test_buffer.py  test_call.py  test_collatz.py  test_compare.py  test_copy.py  test_cuda.py  test_cupy.py  test_dict_args.py  test_forward.py  test_metal.py  test_multidim.py  test_nested.py  test_normalize.py  test_npbench.py  test_range.py  test_record_args.py  test_reduce.py  test_scalar.py  test_slicing.py  test_softmax.py  test_spmm.py  test_spmv.py  test_string.py  test_sum.py  test_sync.py  test_syrk.py  test_unsupported.py
(+111 files in other folders)
