[package]
name = "prickle"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "prickle"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.1"
rand = "0.8.5"
strum = "0.26"
strum_macros = "0.26"
itertools = "0.14.0"

[dev-dependencies]
regex = "1.11.1"
