[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "parir"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [
  { name = "Lars Hummelgren", email = "lasse.hummelgren@gmail.com" }
]
dependencies = [
  "pytest",
  "torch",
]
[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
