[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "prickle"
requires-python = ">=3.8"
version = "0.0.5"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [
  { name = "Lars Hummelgren", email = "lasse.hummelgren@gmail.com" }
]
dependencies = [
  "numpy",
  "pytest",
  "torch"
]

[project.optional-dependencies]
cuda = ["cuda-python"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
